# cue-kit

./: .env.example  .gitignore  COMMERCIAL-LICENSE-TEMPLATE.md  LICENSE  README.md  pyproject.toml
cue_kit/: __init__.py  __main__.py  cli.py  config.py  download.py  frames.py  pipeline.py  slides.py  transcribe.py  whisper.py
cue_kit/modes/: __init__.py  lecture_notes.py  summary.py  training_doc.py  transcript.py
skill/: SKILL.md
