[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cue-kit"
version = "0.1.0"
description = "A tactical toolkit for turning videos into structured text — transcripts, training docs, lecture notes, and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ryan Clontz" }]
keywords = ["video", "transcription", "whisper", "yt-dlp", "ffmpeg", "training", "lectures", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
cue-kit = "cue_kit.cli:main"

[tool.setuptools.packages.find]
include = ["cue_kit*"]

[tool.ruff]
line-length = 100
target-version = "py310"
